Fix slider overlapping with input boxes.

--- a/dev/style.css
+++ b/dev/style.css
@@ -26,7 +26,6 @@ body {
 #slider {
     width: 21px;
     height: 84vh;
-    margin-right: 21%;
 }
 
 .noUi-tooltip {
